Fixed masonry text overflow

--- a/src/assets/stylesheets/deltacamp.css.scss
+++ b/src/assets/stylesheets/deltacamp.css.scss
@@ -933,7 +933,6 @@ form {
 .masonry-img--caption {
   display: block;
   font-size: 1.5rem;
-  position: absolute;
   margin: 0.5rem 1.5rem 1.5rem;
 
   @media (max-width: 600px) {
